# PrivHost

./: Cargo.toml  LICENSE  README.md  test.html
FEFileExplorer/: Decryptor.cs  FEFileExplorer.csproj  FEFileExplorer.sln  FileExplorer.Designer.cs  FileExplorer.cs  Program.cs  ServerCommunicator.cs
FEFileExplorer/MigrationBackup/feb25c3c/FEFileExplorer/: FEFileExplorer.csproj  NuGetUpgradeLog.html  packages.config
FEFileExplorer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
FEFolderMonitor/: !hi.txt  CRUD.cpp  CRUD.h  Encrypter.cpp  Encrypter.h  FEFolderMonitor.cpp  FEFolderMonitor.sln  FEFolderMonitor.vcxproj  FEFolderMonitor.vcxproj.filters
FEFolderMonitor/FEFolderMonitor/x64/Debug/: FEFolderMonitor.exe.recipe  FEFolderMonitor.ilk  FEFolderMonitor.vcxproj.FileListAbsolute.txt  vc143.idb
FEFolderMonitor/FEFolderMonitor/x64/Debug/FEFolderMonitor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FEFolderMonitor.lastbuildstate  FEFolderMonitor.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RustHTTPServer/: Cargo.toml
RustHTTPServer/src/: main.rs
