[package]
name = "privhost"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros" ] }
futures-util = "0.3"
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
